--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "base-64": "^1.0.0",
     "react": "17.0.2",
     "react-native": "0.67.1"
   },
