--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "description": "Phyllo Connect is a quick and secure way to connect work platforms via Phyllo in your app. Supports: iOS, Android.",
   "homepage": "https://github.com/getphyllo/react-native-phyllo-connect-sdk",
-  "main": "src/index.tsx",
   "types": "lib/index.d.ts",
   "author": "Phyllo <phyl@getphyllo.com>",
   "license": "MIT",
+  "main": "./lib/index.d.ts",
   "files": [
     "android",
     "ios",
@@ -24,8 +24,7 @@
     "!local.properties",
     "!project.xcworkspace",
     "!xcshareddata",
-    "!xcuserdata",
-    "src/*"
+    "!xcuserdata"
   ],
   "scripts": {
     "compile": "rm -rf lib && tsc -p .",
