--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,12 +34,27 @@ apply plugin: 'com.android.library'
 
 
 android {
-    compileSdkVersion safeExtGet('compileSdkVersion', 31)
-    buildToolsVersion safeExtGet('buildToolsVersion', '31.0.0')
+    //compileSdkVersion safeExtGet('compileSdkVersion', 31)
+    //buildToolsVersion safeExtGet('buildToolsVersion', '31.0.0')
+
+    // defaultConfig {
+    //     minSdkVersion safeExtGet('minSdkVersion', 21)
+    //     targetSdkVersion safeExtGet('targetSdkVersion', 31)
+    // }
+
+    compileSdkVersion 30
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
-        minSdkVersion safeExtGet('minSdkVersion', 21)
-        targetSdkVersion safeExtGet('targetSdkVersion', 31)
+        minSdkVersion 21
+        targetSdkVersion 30
+        versionCode 1
+        versionName "0.0.1"
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
