--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.pankajpatel.reactnativeconnect">
+    package="com.phylloconnect">
     
     <application>
     <meta-data
-      android:name="com.plaid.link.react_native"
+      android:name="com.phylloconnect.react_native"
       android:value="7.2.1" />
   </application>
 
