--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'example'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 
-include ':react-native-connect'
-project(':react-native-connect').projectDir = new File(rootProject.projectDir, '../../android')
+include ':react-native-phyllo-connect'
+project(':react-native-phyllo-connect').projectDir = new File(rootProject.projectDir, '../../android')
 
 include ':app'
