--- a/example/package.json
+++ b/example/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.16.1",
     "axios": "^0.26.0",
+    "babel-runtime": "^6.26.0",
     "base-64": "^1.0.0",
     "react": "^17.0.2",
     "react-native": "^0.67.1",
