--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "build": "cd ../ && npm pack && cd ./example && npm install ../react-native-phyllo-connect-0.0.1.tgz"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.16.1",
