--- a/ios/PhylloConnectModule.xcodeproj/xcshareddata/xcschemes/PhyConnectModule.xcscheme
+++ b/ios/PhylloConnectModule.xcodeproj/xcshareddata/xcschemes/PhyConnectModule.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "FA0EFF5F236CC8FB00069FA8"
-               BuildableName = "libPhyConnectModule.a"
+               BuildableName = "libPhylloConnectModule.a"
                BlueprintName = "PhylloConnectModule"
-               ReferencedContainer = "container:PhyConnectModule.xcodeproj">
+               ReferencedContainer = "container:PhylloConnectModule.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -51,9 +51,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "FA0EFF5F236CC8FB00069FA8"
-            BuildableName = "libPhyConnectModule.a"
+            BuildableName = "libPhylloConnectModule.a"
             BlueprintName = "PhylloConnectModule"
-            ReferencedContainer = "container:PhyConnectModule.xcodeproj">
+            ReferencedContainer = "container:PhylloConnectModule.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
