--- a/example/package.json
+++ b/example/package.json
@@ -8,15 +8,14 @@
     "ios": "react-native run-ios",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "start": "react-native start",
-    "test": "jest",
-    "build": "cd ../ && npm pack && cd ./example && npm install ../phyllo-connect-react-native-0.0.1.tgz"
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.16.1",
     "axios": "^0.26.0",
     "babel-runtime": "^6.26.0",
     "base-64": "^1.0.0",
-    "phyllo-connect-react-native": "file:../phyllo-connect-react-native-0.0.1.tgz",
+    "phyllo-connect-react-native": "0.0.1",
     "react": "^17.0.2",
     "react-native": "^0.67.1",
     "react-native-bouncy-checkbox": "^2.1.10"
