--- a/example/package.json
+++ b/example/package.json
@@ -18,7 +18,8 @@
     "phyllo-connect-react-native": "0.0.1",
     "react": "^17.0.2",
     "react-native": "^0.67.1",
-    "react-native-bouncy-checkbox": "^2.1.10"
+    "react-native-bouncy-checkbox": "^2.1.10",
+    "react-native-dotenv": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
