--- a/example/.env
+++ b/example/.env
@@ -1,2 +1,3 @@
-CLIENT_ID=""
-CLIENT_SECRET=""
+CLIENT_ID="2778c997-f4bc-401d-95c4-6f2178b85404"
+CLIENT_SECRET="535b916c-292b-4771-bd6a-41dc4a53db6f"
+ENVIRONMENT="developement"
