--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "compile": "rm -rf lib && tsc -p .",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "prepare": "yarn compile",
+    "prepare": "npm run compile",
     "test": "jest"
   },
   "devDependencies": {
