--- a/example/package.json
+++ b/example/package.json
@@ -19,7 +19,8 @@
     "react": "^17.0.2",
     "react-native": "^0.67.1",
     "react-native-bouncy-checkbox": "^2.1.10",
-    "react-native-phyllo-connect": "file:../react-native-phyllo-connect-0.0.3.tgz"
+    "react-native-phyllo-connect": "file:../react-native-phyllo-connect-0.0.3.tgz",
+    "react-native-simple-toast": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
