--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-phyllo-connect",
-  "version": "0.0.3",
+  "version": "0.0.6",
   "description": "Phyllo Connect is a quick and secure way to connect work platforms via Phyllo in your app. Supports: iOS, Android.",
   "homepage": "https://github.com/getphyllo/react-native-phyllo-connect-sdk",
   "types": "lib/index.d.ts",
@@ -64,5 +64,12 @@
       "json",
       "node"
     ]
-  }
+  },
+  "keywords": [
+    "phyllo-connect",
+    "getphyllo",
+    "phyllo",
+    "react-native-phyllo-connect",
+    "phyllo-connect-react-native"
+  ]
 }
