--- a/example/package.json
+++ b/example/package.json
@@ -8,8 +8,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "start": "react-native start",
-    "test": "jest",
-    "build": "cd .. && npm pack && cd example && npm i ../phyllo-connect-react-native-0.0.4.tgz"
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.16.1",
@@ -19,7 +18,7 @@
     "react": "^17.0.2",
     "react-native": "^0.67.1",
     "react-native-bouncy-checkbox": "^2.1.10",
-    "react-native-phyllo-connect": "file:../react-native-phyllo-connect-0.0.3.tgz",
+    "react-native-phyllo-connect": "0.0.7",
     "react-native-simple-toast": "^1.1.3"
   },
   "devDependencies": {
