--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "react-native-phyllo-connect",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Phyllo Connect is a quick and secure way to connect work platforms via Phyllo in your app. Supports: iOS, Android.",
   "homepage": "https://github.com/getphyllo/react-native-phyllo-connect-sdk",
   "types": "lib/index.d.ts",
   "author": "Phyllo <phyl@getphyllo.com>",
   "license": "MIT",
-  "main": "./lib/index.d.ts",
+  "main": "./lib/index.js",
   "bugs": {
     "url": "https://github.com/getphyllo/phyllo-connect-reactnative/issues"
   },
