--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,6 +32,16 @@ android {
     }
 }
 
+// rootProject.allprojects {
+//     repositories {
+//         google()
+//         maven{
+//             url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
+//         }
+//         //mavenCentral()
+//     }
+// }
+
 repositories {
     google()
     mavenCentral()
@@ -40,7 +50,7 @@ repositories {
 dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'
-    implementation "com.getphyllo:phyllo-connect:0.1.14"
+    implementation 'com.getphyllo:phyllo-connect:0.1.17'
     
     implementation "com.squareup.okhttp3:okhttp-urlconnection:4.9.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
