--- a/example/package.json
+++ b/example/package.json
@@ -12,13 +12,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.16.1",
+    "@react-native-community/cli-platform-android": "^7.0.1",
     "axios": "^0.26.0",
     "babel-runtime": "^6.26.0",
     "base-64": "^1.0.0",
     "react": "^17.0.2",
     "react-native": "^0.67.1",
     "react-native-bouncy-checkbox": "^2.1.10",
-    "react-native-phyllo-connect": "^0.1.15",
+    "react-native-phyllo-connect": "file:../react-native-phyllo-connect-0.1.16.tgz",
     "react-native-simple-toast": "^1.1.3"
   },
   "devDependencies": {
