--- a/example/android/app/src/debug/AndroidManifest.xml
+++ b/example/android/app/src/debug/AndroidManifest.xml
@@ -9,5 +9,7 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="28">
         <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false" />
+        android:networkSecurityConfig="@xml/network_security_config">
     </application>
+    
 </manifest>
