--- a/package.json
+++ b/package.json
@@ -43,14 +43,12 @@
     "@types/react-native": "^0.66.15",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^27.4.6",
-    "eslint": "^7.32.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^27.4.7",
     "metro-react-native-babel-preset": "^0.67.0",
-    "react-test-renderer": "^17.0.2",
-    "typescript": "^4.5.5",
     "react": "^17.0.2",
-    "react-native": "^0.67.1"
+    "react-native": "^0.67.1",
+    "react-test-renderer": "^17.0.2",
+    "typescript": "^4.5.5"
   },
   "peerDependencies": {},
   "jest": {
