--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "declaration": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "jsx": "react",
     "lib": ["ESNext"],
     "module": "ESNext",
