--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,10 +35,10 @@ android {
 rootProject.allprojects {
     repositories {
         google()
-        mavenCentral()
-        maven {
-           url  "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+        maven{
+            url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
         }
+        //mavenCentral()
     }
 }
 
