--- a/android/build.gradle
+++ b/android/build.gradle
@@ -44,14 +44,14 @@ rootProject.allprojects {
 
 
 
-// repositories {
-//     google()
-//     mavenCentral()
-// }
+repositories {
+    google()
+    mavenCentral()
+}
 
 dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'
-    //implementation "com.getphyllo:phyllo-connect:0.2.0"
-    implementation "com.getphyllo:phyllo-connect:0.2.3-SNAPSHOT"
+    implementation "com.getphyllo:phyllo-connect:0.3.0"
+    //implementation "com.getphyllo:phyllo-connect:0.2.3-SNAPSHOT"
 }
