PLATFORM-1946_signaturechanges and single account

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,17 +32,15 @@ android {
     }
 }
 
-rootProject.allprojects {
-    repositories {
-        google()
-        maven{
-            url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
-        }
-        //mavenCentral()
-    }
-}
-
-
+// rootProject.allprojects {
+//     repositories {
+//         google()
+//         maven{
+//             url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
+//         }
+//         //mavenCentral()
+//     }
+// }
 
 repositories {
     google()
