--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -153,12 +153,6 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
-        release {
-            storeFile file('my-app-key.keystore')
-            storePassword '123456'
-            keyAlias 'my-app-alias'
-            keyPassword '123456'
-        }
     }
     buildTypes {
         debug {
@@ -175,7 +169,7 @@ android {
             //signingConfig signingConfigs.debug
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
         }
     }
 
