--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,26 +32,26 @@ android {
     }
 }
 
-rootProject.allprojects {
-    repositories {
-        google()
-        maven{
-            url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
-        }
-        //mavenCentral()
-    }
-}
-
-
-
-// repositories {
-//     google()
-//     mavenCentral()
+// rootProject.allprojects {
+//     repositories {
+//         google()
+//         maven{
+//             url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
+//         }
+//         //mavenCentral()
+//     }
 // }
+
+
+
+repositories {
+    google()
+    mavenCentral()
+}
 
 dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'
-    //implementation 'com.getphyllo:phyllo-connect:0.3.0'
-    implementation "com.getphyllo:phyllo-connect:0.3.2.5-SNAPSHOT"
+    implementation 'com.getphyllo:phyllo-connect:0.3.1'
+    //implementation 'com.getphyllo:phyllo-connect:0.3.2.17-SNAPSHOT'
 }
