--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:7.4.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${safeExtGet('kotlinVersion', '1.8.0')}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${safeExtGet('kotlinVersion', '1.6.10')}"
     }
 }
 
@@ -23,34 +23,34 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion safeExtGet('compileSdkVersion', 34)
-    buildToolsVersion safeExtGet('buildToolsVersion', '34.0.0')
+    compileSdkVersion safeExtGet('compileSdkVersion', 31)
+    buildToolsVersion safeExtGet('buildToolsVersion', '31.0.0')
 
     defaultConfig {
         minSdkVersion safeExtGet('minSdkVersion', 21)
-        targetSdkVersion safeExtGet('targetSdkVersion', 34)
+        targetSdkVersion safeExtGet('targetSdkVersion', 31)
     }
 }
 //For Snapshot
 
-// rootProject.allprojects {
-//     repositories {
-//         google()
-//         maven{
-//             url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
-//         }
-//         //mavenCentral()
-//     }
-// }
+rootProject.allprojects {
+    repositories {
+        google()
+        maven{
+            url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
+        }
+        //mavenCentral()
+    }
+}
 
 //For Release version
-repositories {
-    google()
-    mavenCentral()
-}
+// repositories {
+//     google()
+//     mavenCentral()
+// }
 
 dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'
-    implementation 'com.getphyllo:phyllo-connect:0.3.5'
+    implementation 'com.getphyllo:phyllo-connect:0.3.4.1-SNAPSHOT'
 }
