--- a/example/package.json
+++ b/example/package.json
@@ -17,10 +17,11 @@
     "axios": "^0.26.0",
     "babel-runtime": "^6.26.0",
     "base-64": "^1.0.0",
-    "react": "^17.0.2",
-    "react-native": "^0.67.1",
+    "react": "^18.2.0",
+    "react-native": "^0.73.3",
     "react-native-bouncy-checkbox": "^3.0.2",
-    "react-native-phyllo-connect": "file:../react-native-phyllo-connect-0.3.5.tgz",
+    "react-native-gradle-plugin": "^0.71.19",
+    "react-native-phyllo-connect": "file:../react-native-phyllo-connect-0.3.6-beta.1.tgz",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-simple-toast": "^1.1.3"
   },
@@ -35,7 +36,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^27.4.7",
     "metro-react-native-babel-preset": "^0.67.0",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "^18.0.2",
     "typescript": "^4.5.5"
   },
   "resolutions": {
