--- a/example/android/app/src/debug/AndroidManifest.xml
+++ b/example/android/app/src/debug/AndroidManifest.xml
@@ -4,12 +4,13 @@
 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
-    <application
-        android:usesCleartextTraffic="true"
-        tools:ignore="GoogleAppIndexingWarning"
-        tools:targetApi="28">
-        <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false" />
-        android:networkSecurityConfig="@xml/network_security_config">
+     <application 
+        android:networkSecurityConfig="@xml/network_security_config" 
+        tools:replace="android:networkSecurityConfig"
+        tools:targetApi="28" 
+        tools:ignore="GoogleAppIndexingWarning" 
+    >
+    <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false" />
     </application>
     
 </manifest>
