--- a/example/package.json
+++ b/example/package.json
@@ -3,54 +3,41 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && react-native run-android",
-    "compile": "tsc -p .",
+    "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.16.1",
-    "@react-native-community/cli-platform-android": "^7.0.1",
-    "@react-native-community/masked-view": "^0.1.11",
-    "axios": "^0.26.0",
-    "babel-runtime": "^6.26.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "axios": "^1.6.7",
     "base-64": "^1.0.0",
-    "react": "^18.2.0",
-    "react-native": "^0.73.3",
-    "react-native-bouncy-checkbox": "^3.0.2",
-    "react-native-gradle-plugin": "^0.71.19",
-    "react-native-phyllo-connect": "file:../react-native-phyllo-connect-0.3.6-beta.1.tgz",
-    "react-native-safe-area-context": "^4.3.3",
-    "react-native-simple-toast": "^1.1.3"
+    "react": "18.2.0",
+    "react-native": "0.73.4",
+    "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-phyllo-connect": "file:../react-native-phyllo-connect-0.3.6.tgz",
+    "react-native-simple-toast": "^3.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/runtime": "^7.16.7",
-    "@types/jest": "^27.4.0",
-    "@types/react-native": "^0.66.15",
-    "@types/react-test-renderer": "^17.0.1",
-    "babel-jest": "^27.4.6",
-    "eslint": "^7.32.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "jest": "^27.4.7",
-    "metro-react-native-babel-preset": "^0.67.0",
-    "react-test-renderer": "^18.0.2",
-    "typescript": "^4.5.5"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/babel-preset": "0.73.21",
+    "@react-native/eslint-config": "0.73.2",
+    "@react-native/metro-config": "0.73.5",
+    "@react-native/typescript-config": "0.73.1",
+    "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.6.3",
+    "eslint": "^8.19.0",
+    "jest": "^29.6.3",
+    "prettier": "2.8.8",
+    "react-test-renderer": "18.2.0",
+    "typescript": "5.0.4"
   },
-  "resolutions": {
-    "@types/react": "^17"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
+  "engines": {
+    "node": ">=18"
   }
 }
